<resources>
    <string name="app_name">GreenHarbour</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="username2">Username :</string>
    <string name="password">Password</string>
    <string name="join_the">Join the Group</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_in">Login</string>
    <string name="location">Location</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="get_location">Get location</string>
    <string name="date">Date</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="have_an_account_login_in">Have an account ? Login In</string>
    <string name="Dont_have_an_account_login_in">Don\'t Have an account ? Sign Up</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_title">Event Title</string>
    <string name="register">Register</string>
    <string name="create_your_new_account">create your new account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ApiKey">AIzaSyCE-07OqyB1ze3XgMCta9qH95p4bhENiLg</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCE-07OqyB1ze3XgMCta9qH95p4bhENiLg</string>
    <string name="time">Time</string>
    <string name="title_activity_event_map_view">EventMapViewActivity</string>

</resources>