<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaves_bgi"
    android:fitsSystemWindows="true"
    tools:context=".Authorization.SignUpActivity">

    <LinearLayout
        android:id="@+id/leaves_flow_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginVertical="30dp"
        app:layout_constraintBottom_toTopOf="@+id/register_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/WelcomeText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/create_your_new_account"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/register_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaves_flow_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-60dp"
        android:layout_marginBottom="-200dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="200dp"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="70dp"
                android:hint="@string/username"
                android:textColorHint="#069563"
                app:boxStrokeColor="#069563"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:hintTextColor="#069563"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.110000014">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/login"
                app:hintTextColor="#069563"
                app:boxStrokeColor="#069563"
                android:textColorHint="#069563"
                app:errorEnabled="true"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/username"
                app:layout_constraintStart_toStartOf="@id/username"
                app:layout_constraintTop_toBottomOf="@+id/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="#069563"
                app:boxStrokeColor="#069563"
                app:endIconMode="password_toggle"
                app:endIconTint="#069563"
                app:errorEnabled="true"
                app:hintTextColor="#069563"
                app:layout_constraintEnd_toEndOf="@id/Login"
                app:layout_constraintStart_toStartOf="@id/Login"
                app:layout_constraintTop_toBottomOf="@+id/Login">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="0dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password">

            </fragment>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#069563"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/autocomplete_fragment"
                app:layout_constraintStart_toStartOf="@+id/autocomplete_fragment"
                app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment"
                app:layout_constraintVertical_bias="0.100000024" />

            <TextView
                android:id="@+id/LoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/have_an_account_login_in"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
                app:layout_constraintStart_toStartOf="@+id/signUpBtn"
                app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
                app:layout_constraintVertical_bias="0.060000002" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>