<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Events.BarrenLocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/savingProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardCornerRadius="5dp"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/eventsImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:maxHeight="200dp"
                android:minHeight="200dp"
                android:src="@drawable/placeholder"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventTitleBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/event_title"
            android:textColorHint="#069563"
            app:boxStrokeColor="#069563"
            app:hintTextColor="#069563"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/autocomplete_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadImgGallery"
            app:layout_constraintVertical_bias="0.06999999">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventTitleBoxEditText"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/white"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitleBox"
            app:layout_constraintVertical_bias="0.0">

        </fragment>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/eventDescriptionBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/description"
            android:textColorHint="#069563"
            app:boxStrokeColor="#069563"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="#069563"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment"
            app:layout_constraintVertical_bias="0.39">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventDescriptionBoxEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:boxStrokeColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uploadImgGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#069563"
            android:text="@string/upload"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#069563"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDescriptionBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>